[gd_scene load_steps=2 format=3 uid="uid://x1k43m5a5iao"]

[ext_resource type="Script" path="res://Scripts/RefactoredTribalDynamics/JoinLobbyScene.gd" id="1_ug6yt"]

[node name="JoinLobbyScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ug6yt")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 92.0
offset_top = 329.0
offset_right = 1112.0
offset_bottom = 369.0

[node name="PlayerNameLabel" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "Name: "

[node name="PlayerNameInput" type="LineEdit" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ColorPicker" type="OptionButton" parent="HBoxContainer"]
layout_mode = 2

[node name="ColorPreview" type="ColorRect" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "Host IP to connect to: "

[node name="IPInput" type="LineEdit" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "127.0.0.1"

[node name="JoinButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Join Lobby"

[node name="ReturnToMain" type="Button" parent="."]
layout_mode = 0
offset_left = 510.0
offset_top = 479.0
offset_right = 657.0
offset_bottom = 527.0
text = "Back"

[connection signal="pressed" from="HBoxContainer/JoinButton" to="." method="_on_JoinButton_pressed"]
[connection signal="pressed" from="ReturnToMain" to="." method="_on_return_to_main_pressed"]
